Inconsistent behavior on maximized/tiled windows when removing titlebars
The video demonstrates the inconsistent behavior when toggling _GTK_HIDE_TITLEBAR_WHEN_MAXIMIZED
.
Maximized: The titlebar is removed and the window resizes to fill the available space.
Tiled: The titlebar is not removed and when the window is focused the titlebar is replaced by a black bar.
Screencast_from_09-08-2018_02_05_29_PM
Distribution: Arch Linux
GnomeShell: 3.28.3
Edited by Jonian Guveli