window-props: Handle hide-titlebar-when-maximized for tiled windows

While we apply the setting to both maximized and tiled windows, we
currently only queue a resize for the former. This is required for
the setting to take effect immediately if the window is already
tiled.

https://gitlab.gnome.org/GNOME/mutter/issues/296